리사이클러뷰 + listAdapter로 영화 리스트 구현

--- a/android-movie/app/src/main/res/values/colors.xml
+++ b/android-movie/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="forestgreen">#2b3e34</color>
+    <color name="lichen">#CFD1B8</color>
 </resources>
