--- a/android-movie/app/src/main/res/values/colors.xml
+++ b/android-movie/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="forestgreen">#2b3e34</color>
     <color name="lichen">#CFD1B8</color>
+    <color name="grey">#a0a0a0</color>
 </resources>
