--- a/android-movie/app/src/main/res/layout/item_movie.xml
+++ b/android-movie/app/src/main/res/layout/item_movie.xml
@@ -10,8 +10,8 @@
         android:id="@+id/iv_poster"
         android:layout_width="76dp"
         android:layout_height="108dp"
-        android:src="@color/lichen"
         android:contentDescription="@string/movie_poster"
+        android:src="@color/lichen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,61 +22,97 @@
         android:layout_height="wrap_content"
         android:paddingStart="15dp"
         android:paddingEnd="15dp"
-        android:text="@string/title"
+        android:text="@string/title_date"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/iv_poster"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tv_release_time"
+    <!-- 상영일 -->
+    <LinearLayout
+        android:id="@+id/release_date_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/release_time"
-        android:textSize="12sp"
-        android:paddingStart="15dp"
-        android:paddingEnd="15dp"
         android:layout_marginTop="13dp"
+        android:orientation="horizontal"
         app:layout_constraintStart_toEndOf="@+id/iv_poster"
-        app:layout_constraintTop_toBottomOf="@+id/tv_title" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_title">
 
-    <TextView
-        android:id="@+id/tv_runtime"
+        <!-- 상영일 레이블 -->
+        <TextView
+            android:id="@+id/tv_release_time_label"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:paddingStart="15dp"
+            android:paddingEnd="0dp"
+            android:text="@string/release_time_label"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/tv_release_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="7dp"
+            android:paddingEnd="15dp"
+            android:text="@string/release_time_date"
+            android:textSize="12sp" />
+    </LinearLayout>
+
+    <!-- 러닝타임 -->
+    <LinearLayout
+        android:id="@+id/runtime_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:paddingStart="15dp"
-        android:paddingEnd="15dp"
-        android:text="@string/runtime"
-        android:textSize="12sp"
+        android:orientation="horizontal"
         app:layout_constraintStart_toEndOf="@+id/iv_poster"
-        app:layout_constraintTop_toBottomOf="@+id/tv_release_time" />
+        app:layout_constraintTop_toBottomOf="@+id/release_date_container">
+
+        <!-- 러닝타임 레이블 -->
+        <TextView
+            android:id="@+id/tv_runtime_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="15dp"
+            android:paddingEnd="0dp"
+            android:text="@string/runtime_label"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/tv_runtime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="7dp"
+            android:paddingEnd="15dp"
+            android:text="@string/runtime_date"
+            android:textSize="12sp" />
+    </LinearLayout>
+
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cv_reservation_btn"
         android:layout_width="88dp"
         android:layout_height="36dp"
         android:backgroundTint="@color/forestgreen"
+        android:clickable="true"
+        android:focusable="true"
         app:cardCornerRadius="5dp"
         app:cardElevation="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:rippleColor="#55000000"
-        app:strokeWidth="0dp"
-        android:clickable="true"
-        android:focusable="true">
+        app:strokeWidth="0dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/btn_reservation"
             android:layout_gravity="center"
+            android:text="@string/btn_reservation"
             android:textColor="@color/lichen"
-            android:textStyle="bold"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            android:textStyle="bold" />
 
     </com.google.android.material.card.MaterialCardView>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
