refactor : MovieDetailActivity.kt 하드코딩된 movieDetailList 별로 객체로 분리, 뷰타입 enum class로 분리, eol 에러 수정

--- a/android-movie/app/src/main/res/layout/fragment_bottom_sheet.xml
+++ b/android-movie/app/src/main/res/layout/fragment_bottom_sheet.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="15dp"
@@ -12,28 +12,29 @@
         android:layout_width="match_parent"
         android:layout_height="65dp"
         android:backgroundTint="@color/white"
+        android:clickable="true"
+        android:focusable="true"
         app:layout_constraintTop_toTopOf="parent"
         app:rippleColor="#33000000"
-        app:strokeWidth="0dp"
-        android:clickable="true"
-        android:focusable="true">
+        app:strokeWidth="0dp">
+
         <TextView
             android:id="@+id/tv_theater1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="15dp"
             android:text="@string/theater_1"
             android:textColor="@color/forestgreen"
-            android:textStyle="bold"
             android:textSize="18sp"
-            android:layout_marginStart="15dp"
-            android:layout_gravity="center_vertical"/>
+            android:textStyle="bold" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/arrow"
+            android:layout_gravity="end|center_vertical"
             android:layout_marginEnd="15dp"
-            android:layout_gravity="end|center_vertical" />
+            android:src="@drawable/arrow" />
     </com.google.android.material.card.MaterialCardView>
 
     <com.google.android.material.card.MaterialCardView
@@ -44,23 +45,24 @@
         app:layout_constraintTop_toBottomOf="@id/cv_theater_1"
         app:rippleColor="@color/black"
         app:strokeWidth="0dp">
+
         <TextView
             android:id="@+id/tv_theater2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="15dp"
             android:text="@string/theater_2"
             android:textColor="@color/forestgreen"
-            android:textStyle="bold"
             android:textSize="18sp"
-            android:layout_marginStart="15dp"
-            android:layout_gravity="center_vertical"/>
+            android:textStyle="bold" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/arrow"
+            android:layout_gravity="end|center_vertical"
             android:layout_marginEnd="15dp"
-            android:layout_gravity="end|center_vertical" />
+            android:src="@drawable/arrow" />
     </com.google.android.material.card.MaterialCardView>
 
     <com.google.android.material.card.MaterialCardView
@@ -71,23 +73,24 @@
         app:layout_constraintTop_toBottomOf="@id/cv_theater_2"
         app:rippleColor="@color/black"
         app:strokeWidth="0dp">
+
         <TextView
             android:id="@+id/tv_theater3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="15dp"
             android:text="@string/theater_3"
             android:textColor="@color/forestgreen"
-            android:textStyle="bold"
             android:textSize="18sp"
-            android:layout_marginStart="15dp"
-            android:layout_gravity="center_vertical"/>
+            android:textStyle="bold" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/arrow"
+            android:layout_gravity="end|center_vertical"
             android:layout_marginEnd="15dp"
-            android:layout_gravity="end|center_vertical" />
+            android:src="@drawable/arrow" />
     </com.google.android.material.card.MaterialCardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
