--- a/android-movie/app/src/main/res/layout/activity_reservation_completed.xml
+++ b/android-movie/app/src/main/res/layout/activity_reservation_completed.xml
@@ -7,7 +7,8 @@
     android:layout_height="match_parent"
     tools:context=".ReservationCompletedActivity">
 
-    <include layout="@layout/back_toolbar" android:id="@+id/toolbar"/>
-
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/back_toolbar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
