--- a/android-movie/app/src/main/res/layout/item_ad.xml
+++ b/android-movie/app/src/main/res/layout/item_ad.xml
@@ -7,9 +7,8 @@
         android:id="@+id/img_ad"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@color/forestgreen"
+        android:contentDescription="@string/ad_image"
         android:scaleType="centerCrop"
-        android:contentDescription="@string/ad_image"/>
-
+        android:src="@color/forestgreen" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
